# service/exchange/exchange-auth/src/main/java/open/vincentf13/exchange/auth/interfaces/AuthCredentialController.java
@@ -5,7 +5,6 @@ import open.vincentf13.common.spring.mvc.OpenApiResponse;
 import open.vincentf13.exchange.auth.api.AuthCredentialApi;
 import open.vincentf13.exchange.auth.api.dto.AuthCredentialCreateRequest;
 import open.vincentf13.exchange.auth.api.dto.AuthCredentialResponse;
-import open.vincentf13.exchange.auth.api.dto.AuthCredentialType;
 import open.vincentf13.exchange.auth.app.service.AuthCredentialService;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -20,8 +19,4 @@ public class AuthCredentialController implements AuthCredentialApi {
         return OpenApiResponse.success(authCredentialService.create(request));
     }
 
-    @Override
-    public OpenApiResponse<AuthCredentialResponse> find(Long userId, AuthCredentialType credentialType) {
-        return OpenApiResponse.success(authCredentialService.find(userId, credentialType));
-    }
 }
